# corn-leaf-disease-classifier

./: .gitattributes  .gitignore  README.md  pyproject.toml
app/: package-lock.json  package.json
app/src/routes/: +layout.svelte  +page.svelte
cnn/: cnn.ipynb  cnn_demo.ipynb
cnn/final/: model.keras  predictions.csv
server/: .gitattributes  cnn.py  label_encoder.pkl  main.py  svm.py  svm_model.pkl
svm/: svm.ipynb  svm_demo (1).ipynb  svm_demo.ipynb
