[tool.poetry]
name = "corn-leaf-disease-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.11.7"
ipykernel = "^6.29.5"
tensorflow = "^2.19.0"
numpy = "^2.1.3"
keras = "^3.10.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
pillow = "^11.2.1"
natsort = "^8.4.0"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
