[tool.poetry]
name = "corn-leaf-disease-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.11.7"
ipykernel = "^6.29.5"
tensorflow = "^2.18.0"
tensorflow-cpu = "^2.18.0"
tensorflow-intel = "^2.18.0"
numpy = "^2.0.2"
keras = "^3.10.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
pillow = "^11.2.1"
natsort = "^8.4.0"
scikit-image = "^0.25.2"
tqdm = "^4.67.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.2"
pydot = "^4.0.0"
graphviz = "^0.20.3"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
